--- a/M1-Unidad4-CSS/ejemplo02.html
+++ b/M1-Unidad4-CSS/ejemplo02.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tarea M1U3 Diseño de CV</title>
+    <title>Tarea M1U4 Diseño de CV</title>
+    <link rel="stylesheet" href="ejemplo02.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    
 </head>
 <body>
 <h2>CURRICULUM VITAE</h2>
-    <h1>Estefania Meurzet</h1> <!--h1: encabezado principal, puede haber uno solo-->
+    <h1>ESTEFANIA MEURZET</h1> <!--h1: encabezado principal, puede haber uno solo-->
     <img src="Imagenes/gato-computadora.jpg" alt="gato con computadora">
 
-<div>
+<div id="contacto">
     <h3>CONTACTO</h3>
     <ul>
         <li>Dirección: 9 de Julio 1896 - Coronda, Santa Fe</li>
@@ -20,15 +25,14 @@
     </ul>
 </div>
 
-<div>
+<div id="sobremi">
     <h3>SOBRE MI</h3>
 <p>Mi nombre es Estefanía, tengo 30 años y vivo actualmente en Coronda, provincia de Santa Fe.</p>
-<p>Me recibí de Técnica Química Nacional, estudié Diseño en Comunicación Visual en la UNL, y desde hace tres años trabajo en una empresa en el sector administrativo.</p>
+<p>Me recibí de <span class="destacado">Técnica Química Nacional</span>, estudié <span class="destacado">Diseño en Comunicación Visual</span> en la UNL, y desde hace tres años trabajo en una empresa en el sector administrativo.</p>
 <p>Decidí realizar el curso de Webmaster como herramienta para llevar a cabo futuros proyectos personales, además de actualizarme y alimentar mis ganas de aprender.</p>
 </div>
 
-
-<div>
+<div id="otrainfo">
     <h3>OTRA INFO SOBRE MI</h3>
     <p>Aquí les dejo un pequeño resumen de las cosas y/o actividades que más me gustan:</p>
     <ol>
@@ -38,8 +42,8 @@
     </ol>
 </div>
 
-<div>
-    <h4>CONTACTO</h4>
+<div id="comunicate">
+    <h4>COMUNICATE</h4>
     <p>En caso de que quisieras contactarte, completá los siguientes campos:
         <form action="">
             <label for="">Nombre y Apellido</label>
@@ -62,7 +66,7 @@
     </p>
 </div>
 
-<div>
+<div id="info">
     <h4>+INFO</h4>
     <p>Si querés conocer un poco más acerca de mis trabajos, te dejo el siguiente <a href="https://ih1.redbubble.net/image.1080796963.1321/st,small,845x845-pad,1000x1000,f8f8f8.jpg" target="_blank">enlace</a> para que visites.        
     </p>
